Fixed typing effect not showing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,13 +9,10 @@ body {
 }
 
 .typing {
-  overflow: hidden;
-  white-space: nowrap;
-  margin: 0 auto;
   border-right: 0.1em solid #23335e;
   animation: typing 2s steps(15, end), blink 0.75s step-end infinite;
 }
-
+/* 
 @keyframes typing {
   from {
     width: 0%;
@@ -23,7 +20,7 @@ body {
   to {
     width: 100%;
   }
-}
+} */
 
 @keyframes blink {
   0%,
